--- a/style.css
+++ b/style.css
@@ -525,3 +525,12 @@ iframe{
   .reveal{transition:none}
   .btn,.link,.nav-links a{transition:none}
 }
+
+.card-img{
+  width:100%;
+  height:210px;
+  object-fit:cover;
+  border-radius:16px;
+  border:1px solid var(--line);
+  margin-top:12px;
+}
