--- a/style.css
+++ b/style.css
@@ -1130,7 +1130,7 @@ iframe{
   .hero-visual::before,
   .hero-grid{
     width:100%;
-    height:400px;
+    height:450px;
     border-radius:22px;
     overflow:hidden;
   }
@@ -1139,7 +1139,7 @@ iframe{
   .hero-portrait{
     width: min(330px, 88%);
     max-width: 330px;
-    height:370px;
+    height:auto;
     display:block;
     margin:0 auto;
     transform: translateY(10px);
@@ -1203,6 +1203,7 @@ iframe{
     max-width: 100%;
   }
 }
+
 
 
 
